# sktk

./: LICENSE  README.md  pyproject.toml
src/sktk/agent/: runtime.py
src/sktk/session/: history.py
src/sktk/session/backends/: memory.py  redis.py  sqlite.py
src/sktk/team/: checkpoint.py
src/sktk/testing/: mocks.py
